[tool.poetry]
name = "gitcrawler"
version = "0.1.0"
description = "Crawl git"
authors = ["Your Name <you@example.com>"]
license = "Sasha Bodiul"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
